syntax = "proto3";

package product_service;
option go_package = "genproto/product_service";

message Category {
    string id = 1;
    string name = 2;
}
message IsUniqueReq {
    string user_id = 1;
    string product_id = 2;
    string table_name = 3;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string made_in = 6;
  repeated string color = 7;
  int64 count = 5;
  float cost = 8;
  float discount = 9;
  int64 age_min = 10;
  int64 age_max = 11;
  string for_gender = 12;
  repeated string product_size = 13;
}

message Basket {
    repeated Product product = 1;
    string user_id = 2;
    int64 total_count = 3;
}
message BasketCreateReq {
    string product_id = 1;
    string user_id = 2;
}
message BasketGetReq {
    string user_id = 1;
    int64 page = 2;
    int64 limit = 3;
}
  
message Order {
    string id = 1;
    string product_id = 2;
    string user_id = 3;
    uint64 count = 4;
    string status = 5;
}

message Like {
    string id = 1;
    string product_id = 2;
    string user_id = 3;
}

message Params {
    map<string, string> filter = 1;
}

message SearchRequest {
  uint64 Page = 1;
  uint64 Limit = 2;
  map<string, string> params = 3;
}

message ListRequest {
    int64 page = 1;
    int64 limit = 2;
}

message GetWithID {
    string id = 1;
}

message MoveResponse {
    bool status = 1;
}

message ListCategory {
    repeated Category categories = 1;
    uint64 total_count = 2;
}

message ListProduct {
    repeated Product products = 1;
    uint64 total_count = 2;
}

message ListBasket {
    repeated Basket baskets = 1;
    uint64 total_count = 2;
}
message DeleteBasket {
    string product_id = 1;
    string user_id = 2;
}

message ListOrder {
    repeated Order orders = 1;
    uint64 total_count = 2;
}

message ListWishlist {
    repeated Like likes = 1;
    uint64 total_count = 2;
}
