syntax = "proto3";

package payment_service;
option go_package = "genproto/payment_service";

message Card {
  string id = 1;
  string created_at = 16;
  string updated_at = 17;
}
