syntax = "proto3";

package user_service;
option go_package = "genproto/user_service";

import "user_model.proto";

service UserService {
  rpc Create(User) returns (UserWithID);
  rpc Get(UserWithID) returns (User);
  rpc Update(User) returns (User);
  rpc Delete(UserWithID) returns (DeleteUserResponse);
  rpc GetAll(ListUserRequest) returns (ListUserResponse);
}